# simple_web_server

./: LICENSE
trunk/: CMakeLists.txt
trunk/src/: simple_web_server.cpp
trunk/src/app/: README.md  simple_web_app_conf.cpp  simple_web_app_log.cpp  simple_web_app_log.h  simple_web_app_poll_thread.cpp  simple_web_app_poll_thread.h  simple_web_app_socket.cpp  simple_web_app_socket.h  simple_web_app_source_file.cpp  simple_web_app_source_file.h  simple_web_app_thread.cpp  simple_web_app_thread.h
trunk/src/core/: README.md  simple_web_core.cpp  simple_web_core.h  simple_web_core_buffer.cpp  simple_web_core_buffer.h  simple_web_core_source.cpp  simple_web_core_source.h
trunk/src/kernel/: simple_web_kernel_http_server.cpp  simple_web_kernel_http_server.h  simple_web_kernel_sources_control.cpp  simple_web_kernel_sources_control.h
trunk/src/protocol/: simple_web_protocol_http.cpp  simple_web_protocol_http.h  simple_web_protocol_http_common_variabels.h  simple_web_protocol_http_common_variables.h
trunk/src/utest/: Makefile  test_http.cpp  test_http.h  test_main.cpp
trunk/test/: README.md
