CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)

PROJECT(SIMPLE_WEB_SERVER)
SET(CMAKE_BUILD_TYPE Debug)

if( CMAKE_BUILD_TYPE STREQUAL "Debug" )
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11  -g -Wall -Wno-unused-variable -pthread -fpermissive")
else( CMAKE_BUILD_TYPE STREQUAL "Debug" )
	set(CMAKE_BUILD_TYPE "Release")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11  -O2 -pthread -fopenmp")
endif( CMAKE_BUILD_TYPE STREQUAL "Debug" )

SET(SIMPLE_WEB_SERVER_BINARY_DIR "./objs/")
SET(EXECUTABLE_OUTPUT_PATH ${SIMPLE_WEB_SERVER_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${SIMPLE_WEB_SERVER_BINARY_DIR})

SET(SIMPLE_WEB_SERVER "./src/simple_web_server.cpp")

ADD_EXECUTABLE(simple_web_server ${SIMPLE_WEB_SERVER})

